# rclone-PySide6

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: __main__.py  conf.py  index.rst
src/rclone_pyside6/: __main__.py  cli.py  greet.py  parse.py  tui.py
src/rclone_pyside6/gui/: __main__.py  process.py
src/rclone_pyside6/gui/generated_ui/: main_window.py  main_window.ui  process_widget.py  process_widget.ui
tests/test_rclone_pyside6/: test_cli.py  test_greet.py  test_parse.py  test_tui.py
tests/test_rclone_pyside6/test_gui/: test_process.py
tests/test_rclone_pyside6/test_gui/test_generated_ui/: test_main_window.py  test_process_widget.py
tools/: run_pyside6_uic.py
