[metadata]
name = rclone-PySide6
version = 0.1.0
author = Boni Lindsley
author_email = boni@lindsley.xyz
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
description = GUI for rclone using PySide6
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    click >= 8.0.3
    phill >= 0.1.1
python_requires = >= 3.9
packages = find_namespace:
package_dir =
    = src

[options.extras_require]
dev =
    PySide6 >= 6.2.3
    Sphinx >= 4.2.0
    black >= 21.9b0
    coverage[toml] >= 6.0.2
    mypy >= 0.910
    phill[PySide6] >= 0.1.0
    pylint >= 2.12.2
    pytest >= 6.2.5
    tox >= 3.24.4
    types-appdirs >= 1.4.1
    types-pkg_resources >= 0.1.3
    types-six >= 1.16.2

[options.entry_points]
console_scripts =
  rclone_pyside6 = rclone_pyside6.__main__:main
  rclone_pyside6-cli = rclone_pyside6.cli:group
  rclone_pyside6-gui = rclone_pyside6.gui.__main__:main

[options.packages.find]
where = src

[options.package_data]
rclone_pyside6.gui.pyside_designer_plugins =
  main_window.ui

[tox:tox]
skipsdist = True

[testenv]
commands =
  {envpython} tools/run_pyside6_uic.py check
  {envpython} -m black --check --diff src tests setup.py docs
  {envpython} -m mypy \
    --package rclone_pyside6 \
    --package test_rclone_pyside6 \
    --package docs
  {envpython} -m mypy setup.py
  {envpython} -m pylint \
    rclone_pyside6 \
    tests/test_rclone_pyside6 \
    docs \
    setup.py
  {envpython} -m coverage erase
  {envpython} -m coverage run
  {envpython} -m coverage report
extras = dev
usedevelop = True
